# QuPepFold

./: Dockerfile  app.py  pyproject.toml
.github/workflows/: docker-image.yml
